--- a/Client/SGNFClient/SGNFClient.csproj
+++ b/Client/SGNFClient/SGNFClient.csproj
@@ -51,9 +51,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
-    <Compile Include="MessageCenter.cs" />
+    <Compile Include="ISMessageCenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SocketManager.cs" />
+    <Compile Include="ISSocketManager.cs" />
     <Compile Include="SocketModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
