--- a/Server/com.ryubai.sgnfexample/.classpath
+++ b/Server/com.ryubai.sgnfexample/.classpath
@@ -4,5 +4,11 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/com.ryubai.sgnf.infoserver"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/com.ryubai.sgnf.scenarioserver"/>
+	<classpathentry kind="lib" path="E:/Projects/SGNF/Server/lib/netty-all-4.1.22.Final.jar"/>
+	<classpathentry kind="lib" path="E:/Projects/SGNF/Server/lib/netty-all-4.1.22.Final-sources.jar"/>
+	<classpathentry kind="lib" path="E:/Projects/SGNF/Server/lib/protostuff-api-1.0.8.jar"/>
+	<classpathentry kind="lib" path="E:/Projects/SGNF/Server/lib/protostuff-collectionschema-1.0.8.jar"/>
+	<classpathentry kind="lib" path="E:/Projects/SGNF/Server/lib/protostuff-core-1.0.8.jar"/>
+	<classpathentry kind="lib" path="E:/Projects/SGNF/Server/lib/protostuff-runtime-1.0.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
