--- a/Client/SGNFClient/SGNFClient.csproj
+++ b/Client/SGNFClient/SGNFClient.csproj
@@ -56,9 +56,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IS\ISSocketManager.cs" />
     <Compile Include="SocketModel.cs" />
+    <Compile Include="SS\SSMessageCenter.cs" />
+    <Compile Include="SS\SSSocketManager.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="SS\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
