--- a/Client/SGNFClient/SGNFClient.csproj
+++ b/Client/SGNFClient/SGNFClient.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IS\ISSocketManager.cs" />
     <Compile Include="SocketModel.cs" />
+    <Compile Include="SS\SSMessageCenter.cs" />
     <Compile Include="SS\SSSocketManager.cs" />
   </ItemGroup>
   <ItemGroup />
