--- a/Client/SGNFClient/SGNFClient.csproj
+++ b/Client/SGNFClient/SGNFClient.csproj
@@ -50,9 +50,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MessageCenter.cs" />
     <Compile Include="SGNFDebug.cs" />
     <Compile Include="Client.cs" />
-    <Compile Include="IS\ISMessageCenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IS\ISSocketManager.cs" />
     <Compile Include="SocketModel.cs" />
