--- a/Client/SGNFClient/SGNFClient.csproj
+++ b/Client/SGNFClient/SGNFClient.csproj
@@ -56,8 +56,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ISSocketManager.cs" />
     <Compile Include="SocketModel.cs" />
+    <Compile Include="SSRecorder.cs" />
     <Compile Include="SSSocketManager.cs" />
-    <Compile Include="Utils\MovementPredict.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
