--- a/Client/SGNFClient/SGNFClient.csproj
+++ b/Client/SGNFClient/SGNFClient.csproj
@@ -51,9 +51,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MessageCenter.cs" />
-    <Compile Include="UnityScript\NetTransform.cs" />
+    <Compile Include="UnityScript\NetManager.cs" />
+    <Compile Include="UnityScript\NetServerTransform.cs" />
     <Compile Include="SGNFDebug.cs" />
-    <Compile Include="Client.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ISSocketManager.cs" />
     <Compile Include="SocketModel.cs" />
