--- a/Client/SGNFUnityTest/SGNFUnityTest.csproj
+++ b/Client/SGNFUnityTest/SGNFUnityTest.csproj
@@ -91,6 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\MainClient.cs" />
+    <Compile Include="Assets\PlayerControl.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
