--- a/Server/SGNFServer/.project
+++ b/Server/SGNFServer/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.ryubai.sgnf.scenarioserver</name>
+	<name>SGNFServer</name>
 	<comment></comment>
 	<projects>
 	</projects>
