--- a/Server/SGNFServerTest/.project
+++ b/Server/SGNFServerTest/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.ryubai.sgnfexample</name>
+	<name>SGNFServerExample</name>
 	<comment></comment>
 	<projects>
 	</projects>
