--- a/Server/SGNFServer/.classpath
+++ b/Server/SGNFServer/.classpath
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="E:/Projects/SGNF/Server/lib/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="E:/Projects/SGNF/Server/lib/commons-logging-1.2-javadoc.jar"/>
-	<classpathentry kind="lib" path="E:/Projects/SGNF/Server/lib/netty-all-4.1.22.Final.jar"/>
-	<classpathentry kind="lib" path="E:/Projects/SGNF/Server/lib/netty-all-4.1.22.Final-sources.jar"/>
-	<classpathentry kind="lib" path="E:/Projects/SGNF/Server/lib/protostuff-api-1.0.8.jar"/>
-	<classpathentry kind="lib" path="E:/Projects/SGNF/Server/lib/protostuff-collectionschema-1.0.8.jar"/>
-	<classpathentry kind="lib" path="E:/Projects/SGNF/Server/lib/protostuff-core-1.0.8.jar"/>
-	<classpathentry kind="lib" path="E:/Projects/SGNF/Server/lib/protostuff-runtime-1.0.8.jar"/>
-	<classpathentry kind="lib" path="E:/Projects/SGNF/Server/lib/connectionPool.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/media/ryubai/workDir/Projects/SGNF/Server/lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="/media/ryubai/workDir/Projects/SGNF/Server/lib/commons-logging-1.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="/media/ryubai/workDir/Projects/SGNF/Server/lib/connectionPool.jar"/>
+	<classpathentry kind="lib" path="/media/ryubai/workDir/Projects/SGNF/Server/lib/netty-all-4.1.22.Final.jar"/>
+	<classpathentry kind="lib" path="/media/ryubai/workDir/Projects/SGNF/Server/lib/netty-all-4.1.22.Final-sources.jar"/>
+	<classpathentry kind="lib" path="/media/ryubai/workDir/Projects/SGNF/Server/lib/protostuff-api-1.0.8.jar"/>
+	<classpathentry kind="lib" path="/media/ryubai/workDir/Projects/SGNF/Server/lib/protostuff-collectionschema-1.0.8.jar"/>
+	<classpathentry kind="lib" path="/media/ryubai/workDir/Projects/SGNF/Server/lib/protostuff-core-1.0.8.jar"/>
+	<classpathentry kind="lib" path="/media/ryubai/workDir/Projects/SGNF/Server/lib/protostuff-runtime-1.0.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
